--- a/Redux-Todo-Example/package.json
+++ b/Redux-Todo-Example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-example-app-1",
+  "name": "redux-todo-example",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,23 +9,16 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
-  "jest" : {
-    "preset" : "react-native"
-  },
   "dependencies": {
-    "expect": "^27.5.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "jest": "^27.5.1"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
